button added for mobile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="game-box" >
                 <img id="runner" src=".\static\fatih\1.png" alt="" style="padding-left: 0.25px">
                 <img id="runningground" src=".\static\runningground.png" alt="">
+                <button> Tıkla ve fatih'in koşturmasını izle</button>
             </div> 
         </div>
         <div  hidden>
